--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/archiver": "^6.0.3",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.13",
+    "@types/semver": "^7.5.8",
     "@types/yazl": "^2.4.5",
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "^9.14.0",
@@ -47,6 +48,7 @@
     "jszip": "^3.10.1",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
+    "semver": "^7.6.3",
     "ts-node": "^10.9.2",
     "webpack": "^5.96.1",
     "winston": "^3.14.2",
