updated lambda handlers to use a uniform set of util functions and interfaces

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -148,7 +148,7 @@ Resources:
           Properties:
             RestApiId: !Ref MyApi
             Path: /package/{id}
-            Method: put
+            Method: post
       Environment:
         Variables:
           S3_BUCKET_NAME: !Ref PackageBucket
