PackageUpdate is working

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -141,7 +141,7 @@ Resources:
       Runtime: nodejs18.x
       CodeUri: dist/handlers/PackageUpdate
       MemorySize: 128
-      Timeout: 3
+      Timeout: 60
       Events:
         ApiEvent:
           Type: Api
@@ -151,7 +151,7 @@ Resources:
             Method: post
       Environment:
         Variables:
-          S3_BUCKET_NAME: !Ref PackageBucket
+          S3_BUCKET_NAME: !Sub "package-files-${Stage}"
 
   PackageDelete:
     Type: AWS::Serverless::Function
