--- a/backend/samconfig.toml
+++ b/backend/samconfig.toml
@@ -8,3 +8,5 @@ confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
 parameter_overrides = "Stage=\"dev\""
+disable_rollback = true
+profile = "trent"
