--- a/backend/template.yml
+++ b/backend/template.yml
@@ -8,6 +8,8 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: !Ref Stage
+      Auth:
+        DefaultAuthorizer: NONE
       # DefinitionBody: 
       #   Fn::Transform:
       #     Name: AWS::Include
