--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "esbuild": "^0.24.0",
     "eslint": "^9.14.0",
     "globals": "^15.11.0",
     "rimraf": "^5.0.10",
@@ -25,10 +26,9 @@
     "@aws-sdk/client-dynamodb": "^3.693.0",
     "@aws-sdk/client-s3": "^3.693.0",
     "@aws-sdk/lib-dynamodb": "^3.693.0",
-    "@types/jszip": "^3.4.0",
-
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.0",
+    "@types/jszip": "^3.4.0",
     "@types/yazl": "^2.4.5",
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
