--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -103,7 +103,7 @@
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": false /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": [
     "src/**/*.ts", "!src/handlers/**/*/ts","!src/services/**/*"  ],
