--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && tsc && node copy_package_json.mjs",
-    "test": "npx jest --coverage",
+    "test": "npx jest --coverage --testPathIgnorePatterns='end_to_end'",
     "lint": "npx eslint"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.14.0",
-    "@types/jszip": "^3.4.0",
+    "esbuild": "^0.24.0",
     "eslint": "^9.14.0",
     "globals": "^15.11.0",
     "rimraf": "^5.0.10",
@@ -28,9 +28,12 @@
     "@aws-sdk/lib-dynamodb": "^3.693.0",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.0",
+    "@types/jszip": "^3.4.0",
     "@types/yazl": "^2.4.5",
     "axios": "^0.24.0",
+    "bluebird": "^3.7.2",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "isomorphic-git": "^1.27.1",
     "jest": "29.7.0",
