--- a/backend/package.json
+++ b/backend/package.json
@@ -12,37 +12,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@aws-sdk/types": "^3.679.0",
     "@eslint/js": "^9.14.0",
-    "@types/aws-lambda": "^8.10.145",
-    "@types/jest": "^29.5.13",
-    "@types/semver": "^7.5.8",
-    "@types/yazl": "^2.4.5",
+    "esbuild": "^0.24.0",
     "eslint": "^9.14.0",
     "globals": "^15.11.0",
-    "jest": "^29.7.0",
     "rimraf": "^5.0.10",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.12.2"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.682.0",
-    "@aws-sdk/client-s3": "^3.685.0",
-    "@aws-sdk/lib-dynamodb": "^3.685.0",
-    "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1691.0",
-    "axios": "^1.7.7",
+    "@aws-sdk/client-dynamodb": "^3.693.0",
+    "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/lib-dynamodb": "^3.693.0",
+    "@types/aws-lambda": "^8.10.145",
+    "@types/jest": "^29.5.0",
+    "@types/jszip": "^3.4.0",
+    "@types/yazl": "^2.4.5",
+    "axios": "^0.24.0",
     "bluebird": "^3.7.2",
-    "commander": "^12.1.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
     "isomorphic-git": "^1.27.1",
+    "jest": "29.7.0",
     "jszip": "^3.10.1",
-    "node-fetch": "^3.3.2",
-    "path": "^0.12.7",
-    "semver": "^7.6.3",
-    "ts-node": "^10.9.2",
-    "winston": "^3.14.2",
+    "node-fetch": "^3.1.0",
     "yazl": "^3.3.0"
   }
 }
