--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2020",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
+    "outDir": "./dist/",
     "moduleResolution": "node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "typeRoots": [
       "./layers/dependencies/nodejs/node_modules/@types",
