--- a/backend/template.yml
+++ b/backend/template.yml
@@ -7,6 +7,7 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: !Ref Stage
+      EndpointConfiguration: REGIONAL
 
   PackageMetadataTable:
     Type: AWS::DynamoDB::Table
