added script to run end-to-end tests

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf dist",
     "build": "npm run clean && tsc && node copy_package_json.mjs",
     "test": "npx jest --coverage --testPathIgnorePatterns='end_to_end'",
+    "test:e2e": "npx jest --runInBand end_to_end",
     "lint": "npx eslint"
   },
   "author": "",
