--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && tsc && node copy_package_json.mjs",
+    "build": "npm run clean && tsc --project tsconfig.handlers.json && tsc --project tsconfig.common.json && tsc --project tsconfig.rate.json",
     "test": "npx jest --coverage --testPathIgnorePatterns='end_to_end'",
     "lint": "npx eslint"
   },
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/jest": "^29.5.14",
+    "@types/semver": "^7.5.8",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
     "eslint": "^9.14.0",
     "globals": "^15.11.0",
@@ -32,13 +34,14 @@
     "@types/yazl": "^2.4.5",
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
+    "commander": "^12.1.0",
     "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "isomorphic-git": "^1.27.1",
     "jest": "29.7.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
+    "semver": "^7.6.3",
     "yazl": "^3.3.0"
   }
 }
