--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,7 +16,7 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.ts", "!src/handlers/**/*/ts","!src/services/**/*"],
+  "include": ["src/**/*.ts"],
 
   "exclude": ["node_modules", "dist"]
 }
