switched to regional endpoint and enforced S3 region

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -8,6 +8,7 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: !Ref Stage
+      EndpointConfiguration: REGIONAL
       # DefinitionBody: 
       #   Fn::Transform:
       #     Name: AWS::Include
