fixed common tsconfig rootDir

--- a/backend/tsconfig.common.json
+++ b/backend/tsconfig.common.json
@@ -2,7 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
       "outDir": "./layers/dependencies/nodejs",
-      "rootDir": "./src/common"
+      "rootDir": "./src"
     },
     "include": [
       "./src/common/**/*"
