--- a/backend/src/handlers/PackageCreate/package.json
+++ b/backend/src/handlers/PackageCreate/package.json
@@ -30,6 +30,7 @@
     "archiver": "^7.0.1",
     "isomorphic-git": "^1.27.1",
     "yazl": "^3.3.0",
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "aws4": "^1.13.2"
   }
 }
