--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/types": "^3.679.0",
     "@eslint/js": "^9.14.0",
     "@types/aws-lambda": "^8.10.145",
+    "@types/aws4": "^1.11.6",
     "@types/jest": "^29.5.13",
     "@types/semver": "^7.5.8",
     "@types/yazl": "^2.4.5",
@@ -29,10 +30,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.682.0",
+    "@aws-sdk/client-opensearch": "^3.699.0",
     "@aws-sdk/client-s3": "^3.685.0",
     "@aws-sdk/lib-dynamodb": "^3.685.0",
+    "@opensearch-project/opensearch": "^2.13.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1691.0",
+    "aws4": "^1.13.2",
     "axios": "^1.7.7",
     "bluebird": "^3.7.2",
     "commander": "^12.1.0",
