--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.693.0",
     "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/client-secrets-manager": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.693.0",
     "@types/aws-lambda": "^8.10.145",
     "@types/jszip": "^3.4.0",
