--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -3,16 +3,12 @@
   "version": "1.0.0",
   "description": "<html lang=\"en\">\r <head>\r <meta charset=\"UTF-8\">\r <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\r </head>",
   "main": "index.js",
-  "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && tsc && node copy_package_json.mjs",
-    "test": "npx jest --coverage --testPathIgnorePatterns='end_to_end'",
-    "lint": "npx eslint"
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/aws4": "^1.11.6",
     "esbuild": "^0.24.0",
     "eslint": "^9.14.0",
     "globals": "^15.11.0",
@@ -39,6 +35,7 @@
     "jest": "29.7.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
-    "yazl": "^3.3.0"
+    "yazl": "^3.3.0",
+    "aws4": "^1.13.2"
   }
 }
